test/parser/wildcard/wildcard_function_error.exp
Error: Unexpected token `_`, expected identifier
test/parser/wildcard/wildcard_function_error.myte:3:4
 3 | fun _ () {}
   |     ^